Oct 02, 2007 - chris
o the freelist routines were completely rewritten and are much faster now.

Oct 01, 2007 - chris
o it's now enough to initialize a ham_key_t and ham_record_t once in the
    beginning, and not before every use. also added some checks and 
    errors when using an uninitialized structure.

Sep 30, 2007 - chris
o ham_env_close now expects a second parameter for flags; you can specify the
    flag HAM_AUTO_CLOSE, and all open databases are closed automatically.
    if the flag is not specified, but cursors are still open, ham_env_close
    fails and returns HAM_ENV_NOT_EMPTY.
o ham_close now expects a second parameter for flags; you can specify the
    flag HAM_AUTO_CLOSE, and all open cursors are closed automatically.
    if the flag is not specified, but cursors are still open, ham_close
    fails and returns HAM_DB_NOT_EMPTY.

Sep 27, 2007 - chris
o fixed a bug in the freelist - the dirty-flag was not set, when an overflow
    page was allocated; if the cache was exhausted, freelist pages could
    get lost, and the file would grow very fast.

Sep 24, 2007 - chris ---------------------------------------------------
                      release of hamsterdb-0.4.6

Sep 24, 2007 - chris
o support for duplicate items is finally finished, and a new sample 
    (db5.c) was added

Sep 13, 2007 - chris
o fixed big endian-bugs in record number databases (ham_find, ham_erase
    and ham_cursor_find did not convert the record number to db-endian)

Aug 31, 2007 - chris
o renamed ham_cursor_replace to ham_cursor_overwrite (to be consistent with
	the flag HAM_OVERWRITE)

Aug 30, 2007 - chris
o bugfix: if a cursor pointed to an item, but this item was erased (either
	with another cursor or ham_erase), the dangling pointer was not updated,
	and a subsequent access would result in undefined behaviour - fixed.

Aug 24, 2007 - chris
o overwriting record number keys was not possible because a new (incremented) 