@@ -1,3 +1,7 @@
+Oct 03, 2007 - chris
+o rewrote some blob management routines which resulted in an improvement
+    of duplicate keys.
+
 Oct 02, 2007 - chris
 o the freelist routines were completely rewritten and are much faster now.
 
